# gomoku_rst

./: .t.rs.swp  Cargo.toml  \  foo.txt
src/: gameboard.rs  gameboard_controller.rs  gameboard_view.rs  main.rs
src/display/: game_information_view.rs  gameboard_controller.rs  gameboard_view.rs
src/game/: board.rs  game.rs  minimax.rs  move.rs  node.rs  player.rs  rules.rs
