[package]
name = "gomoku"
version = "0.1.1"
authors = ["Sacrimento <sacrimentocorp@gmail.com>", "ygarrot <garrot.yoan1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.51.0"
serde = "1.0.123"
serde_json = "1.0.61"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.65.0"
piston2d-opengl_graphics = "0.72.0"
num-derive = "0.2"
num-traits = "0.2"
